--- a/src/Organizer/Bundle/ClientBundle/Resources/public/js/package.json
+++ b/src/Organizer/Bundle/ClientBundle/Resources/public/js/package.json
@@ -7,7 +7,6 @@
     "test": "tests"
   },
   "dependencies": {
-    "angular": "~1.3.14",
     "gulp": "~3.8.11",
     "vinyl-source-stream": "~1.0.0",
     "vinyl-buffer": "~1.0.0",
@@ -17,8 +16,12 @@
     "gulp-sass": "~1.3.3",
     "gulp-minify-css": "~1.0.0",
     "jquery": "~2.1.3",
-    "angular-animate": "~1.3.14",
-    "gulp-watch": "~4.1.1"
+    "gulp-watch": "~4.1.1",
+    "react": "~0.13.1",
+    "flux": "~2.0.1",
+    "reactify": "~1.1.0",
+    "events": "~1.0.2",
+    "object-assign": "~2.0.0"
   },
   "devDependencies": {
     "browserify": "~9.0.3"
@@ -29,7 +32,8 @@
   "author": "",
   "license": "ISC",
   "browser": {
-    "angular": "./node_modules/angular/index.js",
-    "angular-animate": "./node_modules/angular-animate/index.js"
+    "flux": "./node_modules/flux/index.js",
+    "react": "./node_modules/react/react.js",
+    "jquery": ""
   }
 }
